--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -4,6 +4,10 @@ h1{
   text-align: center;
 }
 
+h2{
+  font-size: 3rem;
+}
+
 header{
   align-items: center;
   display: grid;
@@ -48,6 +52,7 @@ header img{
   cursor: pointer;
   flex-grow: 1;
   perspective: 1000px;
+  user-select: none;
 }
 
 .board-tile-inner{
@@ -83,10 +88,21 @@ header img{
 
 /* Style the back side */
 .board-tile-back {
-  background-color: dodgerblue;
+  background-color: var(--primary);
   border-radius: 1rem;
-  color: white;
   transform: rotateY(180deg);
+}
+.board-tile-back > img{
+  border-radius: 1rem;
+  height: 100%;
+  user-select: none;
+  width: 100%;
+}
+
+.board-tile-removed {
+  transition: opacity 0.5s;
+  cursor: default;
+  opacity: 0;
 }
 
 .dummy-tile{
@@ -149,4 +165,50 @@ header img{
   font-size: 2rem;
   padding: 2rem;
   width: 90vw;
+}
+
+/* End popup */
+
+.end-box{
+  display: none;
+  opacity: 0;
+  align-items: center;
+  background-color: hsla(0, 0%, 50%, 0.5);
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  z-index: 20;
+}
+.end-box > div{
+  align-items: center;
+  background-color: var(--background);
+  border-radius: var(--border-radius);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  height: 80vh;
+  justify-content: center;
+  width: 90vw;
+}
+
+.main-page-button{
+  background-color: var(--primary);
+  border-radius: var(--border-radius);
+  color: var(--background);
+  margin: 2rem;
+  padding: 1rem;
+  text-decoration: none;
+  transition: 0.25s;
+}
+.main-page-button:hover{
+  background-color: var(--accent);
+}
+
+.game-ended{
+  opacity: 1;
+  transition: opacity 1s;
 }
