--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,17 @@ nav > a{
   width: calc(100% - 4rem);
 }
 
-@media (max-width: 400px) {
+@media (max-width: 1200px) {
   nav{
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 700px) {
+  nav{
+    grid-template-columns: 1fr;
+  }
+  nav > a {
+    aspect-ratio: auto;
   }
 }
