--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
 @import url('./root.css');
 
 footer{
-  padding: 4rem;
-  padding-bottom: 2rem;
+  padding: 2rem;
   text-align: center;
 }
 
@@ -11,23 +10,32 @@ h1{
 }
 
 h2{
+  margin: 0;
   padding: 1rem;
+  padding-bottom: 2rem;
 }
 
 header{
-  text-align: center;
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+header > img{
+  height: 5rem;
+  width: 5rem;
 }
 
 nav{
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 0 2rem;
 }
 
+/*
 nav > a{
   align-items: center;
-  aspect-ratio : 1 / 1;
   background-color: var(--secondary);
   border-radius: var(--border-radius);
   color: var(--text);
@@ -39,6 +47,23 @@ nav > a{
   text-align: center;
   text-decoration: none;
   width: calc(100% - 4rem);
+}
+*/
+
+nav > a{
+  align-items: center;
+  background-color: var(--secondary);
+  border-radius: var(--border-radius);
+  color: var(--text);
+  display: flex;
+  font-size: 2rem;
+  gap: 2rem;
+  padding: 2rem;
+  text-decoration: none;
+}
+nav > a > img{
+  height: 3rem;
+  width: 3rem;
 }
 
 @media (max-width: 1200px) {
