--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -156,7 +156,7 @@ header img{
   background-color: hsla(0, 0%, 50%);
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   left: 0;
   position: absolute;
@@ -168,6 +168,7 @@ header img{
   background-color: var(--background);
   border-radius: var(--border-radius);
   font-size: 2rem;
+  margin: 1rem;
   padding: 2rem;
   width: calc(90vw - 4rem);
 }
@@ -189,15 +190,55 @@ header img{
   z-index: 20;
 }
 .end-box > div{
-  align-items: center;
   background-color: var(--background);
+  background-image: url('../img/kid-drawing-4.png');
+  background-blend-mode: normal;
+  background-size: cover;
+  background-repeat:   no-repeat;
+  background-position: center center;
   border-radius: var(--border-radius);
+  height: 80vh;
+  width: 90vw;
+}
+.end-box > div > div:first-child{
+  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  height: 80vh;
+  height: 90%;
   justify-content: center;
-  width: 90vw;
+}
+
+.end-box-buttons{
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 10%;
+  justify-items: center;
+}
+.end-box-buttons > a{
+  align-items: center;
+  background-color: hsla(221, 100%, 60%);
+  color: var(--background);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  text-decoration: none;
+  transition: 0.15s;
+  width: 100%;
+}
+.end-box-buttons > a:hover{
+  background-color: var(--primary);
+}
+.end-box-buttons > a:first-child{
+  border-radius: 0 0 0 var(--border-radius);
+}
+.end-box-buttons > a:last-child{
+  border-radius: 0 0 var(--border-radius) 0;
+}
+
+.end-info{
+  font-size: 1.5rem;
 }
 
 .main-page-button{
